Fix proper border-spacing for table

--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -51,8 +51,7 @@ footer {
 }
 
 table {
-  -webkit-border-horizontal-spacing: 0px;
-  -webkit-border-vertical-spacing: 0px;
+  border-spacing: 0;
 }
 
 table th {
